# badbits

./: .gitignore  CLAUDE.md  LICENSE  README.md  badbits.py  pyproject.toml
scripts/: download_model.sh
