[project]
name = "badbits"
version = "0.1.0"
description = "AI-powered posture and habit monitoring using webcam and Moondream vision model"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Alec Sharp", email = "alecsharpie@gmail.com"}
]
keywords = ["posture", "health", "computer vision", "AI", "moondream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Health",
]
dependencies = [
    "moondream>=0.0.6",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "plyer>=2.1.0",
    "pyobjus>=1.2.0; sys_platform == 'darwin'",  # macOS notification dependency
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.284",
    "mypy>=1.5.1",
]

[project.urls]
"Homepage" = "https://github.com/alecsharpie/badbits"
"Bug Tracker" = "https://github.com/alecsharpie/badbits/issues"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
